--- a/client/src/App.css
+++ b/client/src/App.css
@@ -9,7 +9,7 @@ img{
 }
 main{
   padding: 10px;
-  max-width: 700px;
+  max-width: 900px;
   margin: 0 auto;
 }
 header{
@@ -34,9 +34,30 @@ header nav{
 
 div.post{
   display: grid;
-  grid-template-columns: 0.9fr 1.1fr;
+  /* grid-template-columns: 1fr; */
   gap: 20px;
   margin-bottom: 30px;
+}
+@media screen and (min-width:768px){
+  div.post{
+    grid-template-columns: 0.9fr 1.1fr;
+  }
+}
+@media screen and (max-width:767px){
+  div.post{
+    grid-template-columns: 1fr;
+    text-align: center;
+  }
+  .info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+  
+  .author {
+    display: block;
+  }
 }
 div.post div.texts h2{
   margin: 0;
@@ -87,3 +108,39 @@ button{
 form.login h1,form.register h1{
   text-align: center;
 }
+
+div.post-page div.image{
+  max-height: 250px;
+  display: flex;
+  overflow: hidden;
+}
+div.post-page div.image img{
+  object-fit: contain;
+  object-position: center center;
+  width:100%;
+}
+div.post-page a{
+  color: #333;
+  text-decoration: underline;
+}
+div.post-page h1{
+  text-align: center;
+  margin: 10px 0 10px;
+}
+div.post-page time{
+  text-align: center;
+  display: block;
+  font-size: .7rem;
+  color: #aaa;
+}
+div.post-page div.author{
+  text-align: center;
+  margin-bottom: 20px;
+  font-size: 0.8rem;
+  font-weight: bold;
+}
+div.post-page div.content p{
+  line-height: 1.6rem;
+}
+
+
